--- a/package.json
+++ b/package.json
@@ -9,20 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "alpinejs": "^3.14.7",
+    "bcryptjs": "^2.4.3",
+    "crypto-js": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.8.4",
+    "mongoose": "^8.9.1",
     "next": "15.0.4",
+    "next-auth": "^4.24.11",
+    "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-lottie": "^1.2.10"
+    "react-lottie": "^1.2.10",
+    "react-lottie-player": "^2.1.0",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/crypto-js": "^4.2.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-lottie": "^1.2.10",
+    "@types/validator": "^13.12.2",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "postcss": "^8",
