--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "alpinejs": "^3.14.7",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
+    "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.1",
