--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "alpinejs": "^3.14.7",
     "bcryptjs": "^2.4.3",
+    "canvas": "^3.0.1",
+    "canvas-to-blob": "^1.0.0",
     "crypto-js": "^4.2.0",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
@@ -23,9 +25,11 @@
     "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.2.0",
     "react-icons": "^5.4.0",
     "react-lottie": "^1.2.10",
     "react-lottie-player": "^2.1.0",
+    "react-toastify": "^11.0.2",
     "validator": "^13.12.0"
   },
   "devDependencies": {
