--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "mkcert": "^3.2.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.1",
     "next": "15.0.4",
