--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "mkcert": "^3.2.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.1",
-    "next": "15.0.4",
+    "next": "^15.1.4",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.9.16",
     "react": "^19.0.0",
