--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.2.0",
     "react-icons": "^5.4.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-lottie": "^1.2.10",
     "react-lottie-player": "^2.1.0",
     "react-toastify": "^11.0.2",
