--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcjet/next": "^1.0.0-beta.1",
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@tailwindcss/line-clamp": "^0.4.4",
     "alpinejs": "^3.14.7",
