--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@arcjet/next": "^1.0.0-beta.1",
     "@lottiefiles/react-lottie-player": "^3.5.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/line-clamp": "^0.4.4",
     "alpinejs": "^3.14.7",
     "bcryptjs": "^2.4.3",
     "canvas": "^3.0.1",
     "canvas-to-blob": "^1.0.0",
+    "class-variance-authority": "^0.7.1",
     "crypto-js": "^4.2.0",
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
@@ -34,6 +36,7 @@
     "react-lottie": "^1.2.10",
     "react-lottie-player": "^2.1.0",
     "react-toastify": "^11.0.2",
+    "tailwind-merge": "^2.6.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
