--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "canvas": "^3.0.1",
     "canvas-to-blob": "^1.0.0",
     "class-variance-authority": "^0.7.1",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
