--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-lottie": "^1.2.10",
     "react-lottie-player": "^2.1.0",
     "react-toastify": "^11.0.2",
+    "resend": "^4.7.0",
     "tailwind-merge": "^2.6.0",
     "validator": "^13.12.0"
   },
@@ -57,5 +58,6 @@
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@3.2.3+sha512.f26f951f67de0c6a33ee381e5ff364709c87e70eb5e65c694e4facde3512f1fa80b8679e6ba31ce7d340fbb46f08dd683af9457e240f25a204be7427940d767e"
 }
